# clio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  READINESS-TODO.md  README.md  build.sh  dev.sh
archive/: CLAUDE.md  clio-rationale-transcript.md
archive/python-prototype/: README.md  pyproject.toml
archive/python-prototype/src/ai_shared_memory/: __init__.py  cli.py  config.py  mcp_server.py  models.py  render.py  store.py
archive/python-prototype/tests/: test_store.py
context/: ARCHITECTURE.md  CLAUDE.md  CRITICAL_WARNINGS.md  DOMAIN_RULES.md
crates/: CLAUDE.md
crates/clio-cli/: Cargo.toml  README.md
crates/clio-cli/src/: main.rs
crates/clio-core/: CLAUDE.md  Cargo.toml  README.md
crates/clio-core/src/: assembly.rs  backup.rs  cache.rs  capture.rs  cleanup.rs  config.rs  consolidate.rs  context.rs  daemon.rs  db.rs  deduplication.rs  embeddings.rs  error.rs  export.rs  integrity.rs  lib.rs  migrate.rs  migrations.rs  models.rs  repository.rs  review.rs  scoring.rs  settings.rs  stats.rs  title.rs  validate.rs
crates/clio-core/tests/: integration.rs
crates/clio-daemon/: Cargo.toml  README.md
crates/clio-daemon/src/: auto_linker.rs  control.rs  main.rs  maintenance.rs  watcher.rs
crates/clio-mcp/: Cargo.toml  README.md
crates/clio-mcp/src/: main.rs
crates/clio-tauri/: Cargo.toml  DEVELOPMENT_LOG.md  README.md  ROADMAP.md  ROADMAP_LOG.md  tauri.conf.json
crates/clio-tauri/capabilities/: default.json
crates/clio-tauri/icons/: icon.icns
crates/clio-tauri/src/: lib.rs  main.rs
crates/clio-tauri/src/commands/: clipboard.rs  deduplication.rs  memory.rs  mod.rs  namespaces.rs  search.rs  stats.rs
docs/: CLAUDE.md  README.md  cli-reference.md  getting-started.md  mcp-agent-setup.md  performance-audit.md  rationale.md  resource-limits.md  security-review.md  tauri-app.md
docs/guides/: moving-project.md
docs/plan/: implementation-plan.md
docs/reference/: mcp-contract.md  schema.md  settings.md
docs/superpowers/plans/: 2026-03-11-ai-title-generation.md  2026-03-11-performance-optimisations.md  2026-06-19-clio-revival-phase-0-1.md  2026-06-21-clio-retrieval-and-lifecycle.md  2026-06-27-clio-team-hub-sync.md  2026-07-02-clio-effectiveness-and-production-readiness.md
docs/superpowers/specs/: 2026-03-11-ai-title-generation-design.md  2026-03-11-performance-optimisations-design.md  2026-06-19-clio-revival-design.md
ui/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.vue  style.css
ui/src/api/: memory.ts  types.ts
ui/src/components/: AppBar.vue  BulkActionBar.vue  CommandPalette.vue  ComposeArea.vue  DateGroup.vue  KindSelector.vue  LinkList.vue  MemoryDrawer.vue  MemoryPage.vue  NotificationToast.vue  QuickCreate.vue  ShortcutHelp.vue  SidePanel.vue  TagInput.vue  VirtualMemoryList.vue
ui/src/composables/: useAutoSave.ts  useDebounce.ts  useGroupedMemories.ts  useKeyboard.ts  useNamespaceColours.ts
ui/src/router/: index.ts
ui/src/stores/: memories.ts
ui/src/utils/: memoryExport.ts
ui/src/views/: ContextBuilderView.vue  HomeView.vue  NamespacesView.vue  StatsView.vue  ToolsView.vue
