[workspace]
resolver = "2"
members = [
    "crates/clio-core",
    "crates/clio-cli",
    "crates/clio-daemon",
    "crates/clio-mcp",
    "crates/clio-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
clio-core = { path = "crates/clio-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }
tokio = { version = "1" }
tauri = "2"
tauri-build = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
