[package]
name = "clio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for Clio shared memory system"

[[bin]]
name = "clio"
path = "src/main.rs"

[dependencies]
clio-core = { workspace = true, features = ["local-embeddings", "openai-embeddings", "capture"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
