[package]
name = "clio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for Clio shared memory system"

[features]
default = ["local-embeddings"]
local-embeddings = ["dep:fastembed"]
openai-embeddings = ["dep:reqwest", "dep:tokio"]
capture = ["dep:reqwest", "dep:tokio"]

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
moka = { version = "0.12", features = ["sync"] }
fastembed = { version = "5", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3"
