[package]
name = "clio-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server for Clio shared memory system"

[[bin]]
name = "clio-mcp"
path = "src/main.rs"

[dependencies]
clio-core = { workspace = true, features = ["local-embeddings", "openai-embeddings", "capture"] }
rmcp = { version = "0.17", features = ["server", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
schemars = "1"
rusqlite = { workspace = true }
